ThreadSanitizer: data race [@ Shutdown] vs. [@ mozilla::places::History::FetchPageInfo]
Categories
(Toolkit :: Places, defect, P2)
Tracking
()
Tracking | Status | |
---|---|---|
firefox80 | --- | fixed |
People
(Reporter: jkratzer, Assigned: mak)
References
(Blocks 2 open bugs)
Details
Attachments
(2 files)
The attached crash information was detected while running CI tests with ThreadSanitizer on mozilla-central revision 20200619-b2df79a80c03.
For detailed crash information, see attachment.
General information about TSan reports
Why fix races?
Data races are undefined behavior and can cause crashes as well as correctness issues. Compiler optimizations can cause racy code to have unpredictable and hard-to-reproduce behavior.
Rating
If you think this race can cause crashes or correctness issues, it would be great to rate the bug appropriately as P1/P2 and/or indicating this in the bug. This makes it a lot easier for us to assess the actual impact that these reports make and if they are helpful to you.
False Positives / Benign Races
Typically, races reported by TSan are not false positives [1], but it is possible that the race is benign. Even in this case it would be nice to come up with a fix if it is easily doable and does not regress performance. Every race that we cannot fix will have to remain on the suppression list and slows down the overall TSan performance. Also note that seemingly benign races can possibly be harmful (also depending on the compiler, optimizations and the architecture) [2][3].
[1] One major exception is the involvement of uninstrumented code from third-party libraries.
[2] http://software.intel.com/en-us/blogs/2013/01/06/benign-data-races-what-could-possibly-go-wrong
[3] How to miscompile programs with "benign" data races: https://www.usenix.org/legacy/events/hotpar11/tech/final_files/Boehm.pdf
Suppressing unfixable races
If the bug cannot be fixed, then a runtime suppression needs to be added in mozglue/build/TsanOptions.cpp. The suppressions match on the full stack, so it should be picked such that it is unique to this particular race. The bug number of this bug should also be included so we have some documentation on why this suppression was added.
Assignee | ||
Comment 1•3 years ago
|
||
This is about access to mShuttingDown, we have mShutdownMutex but we missed it in GetConstDBConn
Assignee | ||
Comment 3•3 years ago
|
||
Pushed by mak77@bonardo.net: https://hg.mozilla.org/integration/autoland/rev/5d5f5e01c3a1 Avoid a possible thread race in History::GetconstDBConn. r=Standard8
Comment 5•3 years ago
|
||
bugherder |
Comment 6•3 years ago
|
||
Is there a user impact which would justify backport consideration here?
Assignee | ||
Comment 7•3 years ago
|
||
That's unknown, we should check if there's some crash bugs on shutdown that disappear or reduce, but off-hand I don't think we'll see any notable changes.
Assignee | ||
Updated•3 years ago
|
Description
•