Bug 1647413 - Avoid a possible thread race in History::GetconstDBConn. r=Standard8

Differential Revision: https://phabricator.services.mozilla.com/D80666