toolkit/components/places/History.cpp
@@ -849,10 +849,11 @@ class InsertVisitedURIs final : public Runnable {
   }
 
   nsresult InnerRun() {
-    // Prevent the main thread from shutting down while this is running.
-    MutexAutoLock lockedScope(mHistory->GetShutdownMutex());
+    MOZ_ASSERT(!NS_IsMainThread());
+    // Prevent Shutdown() from proceeding while this is running.
+    MutexAutoLock lockedScope(mHistory->mBlockShutdownMutex);
+    // Check if we were already shutting down.
     if (mHistory->IsShuttingDown()) {
-      // If we were already shutting down, we cannot insert the URIs.
       return NS_OK;
     }
 
@@ -1375,7 +1376,8 @@ History* History::gService = nullptr;
 
 History::History()
     : mShuttingDown(false),
-      mShutdownMutex("History::mShutdownMutex"),
+      mShuttingDownMutex("History::mShuttingDownMutex"),
+      mBlockShutdownMutex("History::mBlockShutdownMutex"),
       mRecentlyVisitedURIs(RECENTLY_VISITED_URIS_SIZE) {
   NS_ASSERTION(!gService, "Ruh-roh!  This service has already been created!");
   if (XRE_IsParentProcess()) {
@@ -1484,7 +1486,7 @@ NS_IMPL_ISUPPORTS(ConcurrentStatementsHolder, mozIStorageCompletionCallback)
 
 nsresult History::QueueVisitedStatement(RefPtr<VisitedQuery> aQuery) {
   MOZ_ASSERT(NS_IsMainThread());
-  if (mShuttingDown) {
+  if (IsShuttingDown()) {
     return NS_ERROR_NOT_AVAILABLE;
   }
 
@@ -1760,7 +1762,9 @@ already_AddRefed<History> History::GetSingleton() {
 
 mozIStorageConnection* History::GetDBConn() {
   MOZ_ASSERT(NS_IsMainThread());
-  if (mShuttingDown) return nullptr;
+  if (IsShuttingDown()) {
+    return nullptr;
+  }
   if (!mDB) {
     mDB = Database::GetDatabase();
     NS_ENSURE_TRUE(mDB, nullptr);
@@ -1773,23 +1777,24 @@ mozIStorageConnection* History::GetDBConn() {
 }
 
 const mozIStorageConnection* History::GetConstDBConn() {
-  MOZ_ASSERT(mDB || mShuttingDown);
-  if (mShuttingDown || !mDB) {
-    return nullptr;
+  MOZ_ASSERT(!NS_IsMainThread());
+  {
+    MOZ_ASSERT(mDB || IsShuttingDown());
+    if (IsShuttingDown() || !mDB) {
+      return nullptr;
+    }
   }
   return mDB->MainConn();
 }
 
 void History::Shutdown() {
   MOZ_ASSERT(NS_IsMainThread());
-
-  // Prevent other threads from scheduling uses of the DB while we mark
-  // ourselves as shutting down.
-  MutexAutoLock lockedScope(mShutdownMutex);
-  MOZ_ASSERT(!mShuttingDown && "Shutdown was called more than once!");
-
-  mShuttingDown = true;
-
+  MutexAutoLock lockedScope(mBlockShutdownMutex);
+  {
+    MutexAutoLock lockedScope(mShuttingDownMutex);
+    MOZ_ASSERT(!mShuttingDown && "Shutdown was called more than once!");
+    mShuttingDown = true;
+  }
   if (mConcurrentStatementsHolder) {
     mConcurrentStatementsHolder->Shutdown();
   }
@@ -1825,7 +1830,7 @@ History::VisitURI(nsIWidget* aWidget, nsIURI* aURI, nsIURI* aLastVisitedURI,
   MOZ_ASSERT(NS_IsMainThread());
   NS_ENSURE_ARG(aURI);
 
-  if (mShuttingDown) {
+  if (IsShuttingDown()) {
     return NS_OK;
   }
 
@@ -1958,7 +1963,7 @@ History::SetURITitle(nsIURI* aURI, const nsAString& aTitle) {
   MOZ_ASSERT(NS_IsMainThread());
   NS_ENSURE_ARG(aURI);
 
-  if (mShuttingDown) {
+  if (IsShuttingDown()) {
     return NS_OK;
   }
 
